[tool.poetry]
name = "hello-streamlit"
version = "0.1.0"
description = ""
authors = ["Seong Yong-ju <sei40kr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.62.1"
numpy = "^1.19.0"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
